# taiga-cli

./: Cargo.toml  README.md  demo.tape  flake.nix  justfile  result  taiga-cli.txt  taiga.1.scd
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 6qwabcngmsl4123sgw1dqdrm2l32mrh8-source  abhbl2k69lvn0n07xaqrg9l62l5xwq8j-source  idj2jaaarjlvpiq2kxdlw937yr0j086l-source  v8q8yw480d7p4m8r85x9wp0lcz8np5zk-source
_src/: main.rs
_src/taiga/: auth.rs  cache.rs  project.rs  status.rs  taiga.rs  user.rs
src/: auth.rs  cli.rs  main.rs  project.rs  taiga.rs  task.rs  time.rs  utils.rs
src.bak/taiga/: mod.rs
src/cli/: cli.rs  mod.rs
src/taiga/: auth.rs  cache.rs  mod.rs  project.rs  request.rs  taiga.rs  task.rs  user.rs
src_/: auth.rs  main.rs  taiga.rs  task.rs
