[package]
name = "taiga-cli"
description = "Cli tool for taiga.io inspired by taskwarrior"
authors = ["Paul Chambaz <paul.chambaz@tutanota.com>"]
homepage = "https://github.com/paulchambaz/taiga-cli"
version = "1.1.0"
edition = "2021"
include = ["src/**/*", "README.md"]
license-file = "LICENSE"
readme = "README.md"
documentation = "https://docs.rs/taiga-cli"
keywords = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
bincode = "1.3.3"
chrono = { version = "0.4.34", features = ["serde"] }
colored = "2.1.0"
directories = "5.0.1"
lazy_static = "1.5.0"
prettytable-rs = "0.10.0"
regex = "1.11.1"
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
rpassword = "7.3.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
sha1 = "0.10.6"
temporis = "1.0.2"
uuid = { version = "1.12.0", features = ["v4"] }

[[bin]]
name = "taiga"
path = "src/main.rs"
